--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -54,7 +54,11 @@
 }
 
 .header__username {
+  max-width: 160px;
+  min-width: 0;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .header__link {
