--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -3,7 +3,7 @@
 }
 
 .profile__sidebar {
-  margin: 0 116px 0 0;
+  margin: 0;
 }
 
 .profile__clothing-items {
