--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,6 +1,16 @@
 .sidebar {
   display: flex;
+  flex-direction: column;
   margin: 0 0 0 0;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 100%;
+  width: 229px;
+}
+
+.sidebar__user-container {
+  display: flex;
+  margin: 0 0 24px 0;
 }
 
 .sidebar__avatar {
@@ -9,11 +19,41 @@
   margin: 0 16px 0 0;
   height: 56px;
   width: 56px;
+  display: flex;
+  align-items: center;
+}
+
+.sidebar__avatar--placeholder {
+  margin: 0 auto 0 auto;
 }
 
 .sidebar__username {
+  margin: auto 0 auto 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.sidebar__footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.sidebar__profile-btn {
+  margin: 0 0 8px 0;
+  padding: 0;
+  background: transparent;
+  border: none;
+  cursor: pointer;
   font-weight: 700;
-  font-size: 20px;
-  line-height: 100%;
+  text-wrap: nowrap;
+}
+
+.sidebar__logout-btn {
+  padding: 0;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
   text-wrap: nowrap;
 }
